fixing ace visibility in edge

--- a/webapp/public/custom.css
+++ b/webapp/public/custom.css
@@ -110,7 +110,7 @@
 }
 
 .full-abs {
-    position: absolute;
+    position: absolute !important;
     left: 0;
     top: 0;
     bottom: 0;
